# EDK

./: .gitignore  CMakeLists.txt  Jenkinsfile.groovy  README.md  build_ios.sh  build_macos.sh
cmake/: ExternalBoost.cmake  ExternalCurl.cmake  ExternalGoogleTest.cmake  ExternalMDNSResponder.cmake  ExternalMbedtls.cmake  ExternalNghttp2.cmake  ExternalProjectSwig.cmake
cmake/patches/: curl.patch  mbedtls.patch  mdns_responder.patch
examples/huestream_example-android/: readme.md
examples/huestream_example-android/app/: build.gradle
examples/huestream_example_console/: App.cpp  CMakeLists.txt  SequenceMenu.cpp
examples/huestream_example_gui_win/: EffectPlayer.cpp  StreamTestDlg.cpp  StreamTestDlg.h  resource.h
libhuestream/bridgediscovery/: CMakeLists.txt
libhuestream/bridgediscovery/src/: BridgeDiscovery.cpp  BridgeDiscoveryResult.cpp
libhuestream/huestream/: CMakeLists.txt  HueEDK.cpp  HueEDK.h  HueStream.cpp  HueStream.h  HueStreamFactories.cpp  HueStreamFactories.h  IHueStream.h
libhuestream/huestream/config/: AppSettings.cpp  AppSettings.h  Config.cpp  Config.h  ObjectBuilder.cpp  ObjectBuilder.h
libhuestream/huestream/connect/: Authenticator.cpp  Authenticator.h  BasicGroupLightController.cpp  BasicGroupLightController.h  BridgeConfigRetriever.cpp  BridgeConfigRetriever.h  BridgeFileStorageAccessor.cpp  BridgeFileStorageAccessor.h  BridgeSearcher.cpp  BridgeSearcher.h  (+24 more)
libhuestream/support/: CMakeLists.txt
libhuestream/test/: CMakeLists.txt
tools/huestream_performance_test/: main.cpp
wrappers/: huestream.i
wrappers/csharp/: CMakeLists.txt
(+311 files in other folders)
